Complete testing of Library in Main file