@@ -1,8 +1,11 @@
 package com.srikar.library;
 
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
+// Todo Add Unit Tests
 public class LibraryManager {
     private static LibraryManager INSTANCE;
     private final BookManager bookManager;
@@ -47,30 +50,36 @@ public class LibraryManager {
             throw new IllegalArgumentException("No books found");
         }
         Member member = memberManager.getMember(memberId);
-        int currentLimit = MAX_NUM_OF_BOOKS - member.getBooksBorrowed().size();
-        List<Book> borrowedBooks = member.getBooksBorrowed();
-        for (Book book : borrowedBooks) {
-            if (book.getLoanDuration() > LOAN_DURATION) {
-                String history = "This book is: " + book.getTitle() + ", is overdue charge: " + (book.getLoanDuration() - LOAN_DURATION) * CHARGE_PER_DAY + "rs";
-                member.addHistory(history);
-                System.out.println(history);
+
+        if(member.getBooksBorrowed() != null) {
+            final int currentLimit = MAX_NUM_OF_BOOKS - member.getBooksBorrowed().size();
+            final List<Book> borrowedBooks = member.getBooksBorrowed();
+            for (Book book : borrowedBooks) {
+                if (book.getLoanDuration() > LOAN_DURATION) {
+                    String history = "This book is: " + book.getTitle() + ", is overdue charge: " + (book.getLoanDuration() - LOAN_DURATION) * CHARGE_PER_DAY + "rs";
+                    member.addHistory(history);
+                    System.out.println(history);
+                }
+            }
+            if (currentLimit == 0) {
+                throw new IllegalArgumentException("You have reached the limit of books to borrow");
+            } else if (currentLimit < 0) {
+                throw new IllegalArgumentException("You have exceeded the limit of books to borrow");
+            } else if (books.size() > currentLimit) {
+                books = books.subList(0, currentLimit);
+                System.out.println("More than 5 books are not allowed");
             }
         }
-        if (currentLimit == 0) {
-            throw new IllegalArgumentException("You have reached the limit of books to borrow");
-        } else if (currentLimit < 0) {
-            throw new IllegalArgumentException("You have exceeded the limit of books to borrow");
-        } else if (books.size() > currentLimit) {
-            books = books.subList(0, currentLimit);
-        }
+
         member.setBooksBorrowed(books);
         books.forEach(book -> {
             book.setBorrowed(true);
             book.setBorrowedOn(new Date());
             book.setBorrowedBy(member);
         });
-        List<String> titles = books.stream().map(Book::getTitle).toList();
+        final List<String> titles = books.stream().map(Book::getTitle).toList();
         member.addHistory("These books are: " + titles + ", Borrowed");
+        System.out.println("These books are: " + titles + ", Borrowed");
         return books;
     }
 
@@ -84,18 +93,21 @@ public class LibraryManager {
                 throw new IllegalArgumentException("Invalid book id: " + bookId);
             }
         });
-        List<Book> validBooks = books.stream().filter(book -> bookManager.isValidBook(book.getId())).toList();
+        List<Book> validBooks = books.stream().filter(book -> bookManager.isValidBook(book.getId())).collect(Collectors.toList());
         Member member = memberManager.getMember(memberId);
-        List<Book> borrowedBooks = member.getBooksBorrowed();
+        List<Book> borrowedBooks = new ArrayList<>(member.getBooksBorrowed());
         // Handle the cases if you are returning someone else's borrowed books
         if (borrowedBooks.isEmpty()) {
             throw new IllegalArgumentException("You have not borrowed any books");
         }
         // Handle the charge payment for the books that are overdue
-        List<Book> overdueBooks = borrowedBooks.stream().filter(book -> book.getLoanDuration() > LOAN_DURATION).toList();
+        List<Book> overdueBooks = borrowedBooks.stream().filter(book -> {
+            if(book.getLoanDuration() > LOAN_DURATION) return true;
+            return false;
+        }).toList();
         if (!overdueBooks.isEmpty()) {
             overdueBooks.forEach(book -> {
-                String history = "This book is: " + book.getTitle() + ", is overdue charge: " + (book.getLoanDuration() - LOAN_DURATION) * CHARGE_PER_DAY + "rs";
+                String history = "This book " + book.getTitle() + ", is overdue charge: " + (book.getLoanDuration() - LOAN_DURATION) * CHARGE_PER_DAY + "rs";
                 member.addHistory(history);
                 System.out.println(history);
             });
@@ -104,5 +116,6 @@ public class LibraryManager {
         member.setBooksBorrowed(borrowedBooks);
         books.forEach(book -> book.setBorrowed(false));
         member.addHistory("These books are: " + books.stream().map(Book::getTitle).toList() + ", Returned");
+        System.out.println("These books are: " + books.stream().map(Book::getTitle).toList() + ", Returned");
     }
 }
